feat: Add internationalization support and update application configurations for RabbitMQ and Postgres samples